# sixel1

./: README.md  pyproject.toml
src/sixel1/: __init__.py  main.py
