[project]
name = "sixel1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masato Ota", email = "ohtam@nec.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sixel>=0.2.0",
]

[project.scripts]
sixel1 = "sixel1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
